style(Nav): Change nav position to fix
Change nav position to fix and add margin left to videoContainer to avoid overlap

--- a/client/src/components/Navigation/Styles.scss
+++ b/client/src/components/Navigation/Styles.scss
@@ -5,6 +5,7 @@ nav {
     width: 240px;
     padding: 10px 20px;
     overflow-y: scroll;
+    position: fixed;
 }
 nav::-webkit-scrollbar {
     color: gray;
