--- a/client/src/views/Main/Styles.scss
+++ b/client/src/views/Main/Styles.scss
@@ -9,7 +9,7 @@ main, .recommendationContainer, .videosContainer, .videoListContainer {
 .videosContainer {
     flex: 1;
     flex-direction: column;
-    margin: 0 10px;
+    margin: 0 10px 0 300px;
 }
 /* End of Videos Container */
 
